--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,3 +15,19 @@ nav a{
 nav a:hover{
     color: #F2C94C;
 }
+
+@media screen and (max-width: 768px){
+    .header{
+        padding: 0 20px;
+        display: block;
+        text-align: center;
+        height: auto;
+    }
+    .link-section{
+        padding-top: 10px;
+        padding-bottom: 10px; 
+    }
+    nav a{
+        font-size: 13px;
+    }
+}
