--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,26 @@
 .product img {
   height: 286px;
   width: 286px;
+  padding: 7px;
+  border-radius: 15px;
+}
+.product{
+  border: 1px solid #95A0A7;
+  border-radius: 5px;
+  width: 300px;
+  height: 510px;
+}
+.product-discription{
+  padding: 10px;
+}
+.product-name{
+  font-size: 21px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.product-price{
+  font-size: 17px;
+  font-weight: 600;
+  margin-top: 7px;
 }
