--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -4,6 +4,10 @@
 }
 .cart-container{
     background-color:rgba(255, 153, 0, 0.3);
-    padding: 20px;
 }
-
+.products-container{
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-gap: 45px;
+}
