--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -9,14 +9,28 @@
   border-radius: 5px;
   width: 300px;
   height: 510px;
+  position: relative;
 }
 .product-discription{
-  padding: 10px;
+padding-left: 10px;
+}
+.btn-cart {
+  width: 100%;
+  height: 48px;
+  background: #f3cc92;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+  position: absolute;
+  bottom: 0;
 }
 .product-name{
   font-size: 21px;
   font-weight: 600;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .product-price{
